--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
     <style>
         body{
             background-color: black;
-            width: 90vw;
+            width: 100%;
             margin: 0%;
             /* margin: 20px; */
             box-sizing: border-box;
         }
         .menu{
-            width: 100vw;
+            width: 100%;
         }
     </style>
 </head>
