--- a/index.html
+++ b/index.html
@@ -1,31 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="./assets/zouq-logo.png" type="image/x-icon">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="shortcut icon"
+      href="./assets/zouq-logo.png"
+      type="image/x-icon"
+    />
     <title>Zouq Resturant Menu by Ahsan</title>
-    <style>
-        body{
-            background-color: black;
-            width: 100%;
-            margin: 0%;
-            /* margin: 20px; */
-            box-sizing: border-box;
-        }
-        .menu{
-            width: 100%;
-        }
-    </style>
-</head>
-<body>
-    <img src="./assets/one.png" alt="menu" class="menu">
-    <img src="./assets/two.png" alt="menu" class="menu">
-    <img src="./assets/three.png" alt="menu" class="menu">
-    <img src="./assets/four.png" alt="menu" class="menu">
-    <img src="./assets/five.png" alt="menu" class="menu">
-    <img src="./assets/six.png" alt="menu" class="menu">
-    <img src="./assets/seven.png" alt="menu" class="menu">
-    <img src="./assets/eight.png" alt="menu" class="menu">
-</body>
+    <link rel="stylesheet" href="./style.css" />
+  </head>
+  <body>
+    <img src="./assets/one.png" alt="menu" class="menu" />
+    <img src="./assets/two.png" alt="menu" class="menu" />
+    <img src="./assets/three.png" alt="menu" class="menu" />
+    <img src="./assets/fours.png" alt="menu" class="menu" />
+    <img src="./assets/five.png" alt="menu" class="menu" />
+    <img src="./assets/six.png" alt="menu" class="menu" />
+    <img src="./assets/seven.png" alt="menu" class="menu" />
+    <img src="./assets/eight.png" alt="menu" class="menu" />
+    <footer>
+      <section>
+        <h1>Zouq Resturant Menu</h1>
+      </section>
+      <div class="footer">
+        <div id="button"></div>
+        <div id="container">
+          <div id="cont">
+            <div class="footer_center">
+              <h3>
+                <a target="_blank" href="https://wa.me/923321575919?text=I'd%20like%20to%20chat%20with%20you%20about%20website%20development">Developed by Ahsan</a>
+              </h3>
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
+  </body>
 </html>
