--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
-    <img src="./assets/one.png" alt="menu" class="menu" />
-    <img src="./assets/two.png" alt="menu" class="menu" />
-    <img src="./assets/three.png" alt="menu" class="menu" />
-    <img src="./assets/fours.png" alt="menu" class="menu" />
-    <img src="./assets/five.png" alt="menu" class="menu" />
-    <img src="./assets/six.png" alt="menu" class="menu" />
-    <img src="./assets/seven.png" alt="menu" class="menu" />
-    <img src="./assets/eight.png" alt="menu" class="menu" />
+    <img src="./assets/MENU-A4-1.png" alt="menu" class="menu" />
+    <img src="./assets/MENU-A4-2.png" alt="menu" class="menu" />
+    <img src="./assets/MENU-A4-3.png" alt="menu" class="menu" />
+    <img src="./assets/MENU-A4-4.png" alt="menu" class="menu" />
+    <img src="./assets/MENU-A4-5.png" alt="menu" class="menu" />
+    <img src="./assets/MENU-A4-6.png" alt="menu" class="menu" />
+    <img src="./assets/MENU-A4-7.png" alt="menu" class="menu" />
+    <img src="./assets/MENU-A4-8.png" alt="menu" class="menu" />
     <footer>
       <section>
         <h1>Zouq Restaurant Menu</h1>
