--- a/index.html
+++ b/index.html
@@ -12,14 +12,16 @@
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
-    <img src="./assets/MENU-A4-1-min.png" alt="menu" class="menu" />
-    <img src="./assets/MENU-A4-2-min.png" alt="menu" class="menu" />
-    <img src="./assets/MENU-A4-3-min.png" alt="menu" class="menu" />
-    <img src="./assets/MENU-A4-4-min.png" alt="menu" class="menu" />
-    <img src="./assets/MENU-A4-5-min.png" alt="menu" class="menu" />
-    <img src="./assets/MENU-A4-6-min.png" alt="menu" class="menu" />
-    <img src="./assets/MENU-A4-7-min.png" alt="menu" class="menu" />
-    <img src="./assets/MENU-A4-8-min.png" alt="menu" class="menu" />
+    <img src="./assets/zouqMenu-01.png" alt="menu" class="menu" />
+    <img src="./assets/zouqMenu-02.png" alt="menu" class="menu" />
+    <img src="./assets/zouqMenu-03.png" alt="menu" class="menu" />
+    <img src="./assets/zouqMenu-04.png" alt="menu" class="menu" />
+    <img src="./assets/zouqMenu-05.png" alt="menu" class="menu" />
+    <img src="./assets/zouqMenu-06.png" alt="menu" class="menu" />
+    <img src="./assets/zouqMenu-07.png" alt="menu" class="menu" />
+    <img src="./assets/zouqMenu-08.png" alt="menu" class="menu" />
+    <img src="./assets/zouqMenu-09.png" alt="menu" class="menu" />
+    <img src="./assets/zouqMenu-10.png" alt="menu" class="menu" />
     <footer>
       <section>
         <h1>Zouq Restaurant Menu</h1>
