--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     />
     <title>Zouq Resturant Menu Developed by Ahsan</title>
     <link rel="stylesheet" href="./style.css" />
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8832142063253828"
+     crossorigin="anonymous"></script>
   </head>
   <body>
     <img src="./assets/zouqMenu-01.png" alt="menu" class="menu" />
